# astragalomancy

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
assets/icon/: gen_additional_sizes.sh
assets/icon/light/: gen_additional_sizes.ps1
assets/shader/: common.shader  sdf_circle.frag  sdf_circle.vert  triangles.frag  triangles.shader  triangles.vert
example/: CMakeLists.txt  indev.cpp
include/astra/: astra.hpp
include/astra/core/: color.hpp  engine.hpp  globals.hpp  hermes.hpp  init.hpp  log.hpp  messenger.hpp  payloads.hpp  types.hpp
include/astra/gfx/: shader_mgr.hpp
include/astra/gfx/2d/module/: painter.hpp
include/astra/util/: averagers.hpp  constexpr_hash.hpp  enum_class_helpers.hpp  io.hpp  is_any_of.hpp  math.hpp  platform.hpp  rng.hpp  time.hpp
include/astra/util/module/: dear.hpp  timer_mgr.hpp
include/gloo/: buffer.hpp  gl.hpp  gloo.hpp  init.hpp  shader.hpp  vertex_array.hpp  wrap.hpp
include/sdl3_raii/: event_pump.hpp  gl_attr.hpp  gl_context_flags.hpp  init.hpp  keycode.hpp  scancode.hpp  sdl3_raii.hpp  window.hpp
include/sdl3_raii/events/: audio.hpp  camera.hpp  clipboard.hpp  display.hpp  drop.hpp  gamepad.hpp  joystick.hpp  keyboard.hpp  mouse.hpp  pen.hpp  quit.hpp  raw.hpp  render.hpp  sensor.hpp  text.hpp  theme.hpp  touch.hpp  user.hpp  window.hpp
src/astra/core/: color.cpp  engine.cpp  globals.cpp  init.cpp  log.cpp
src/astra/gfx/: shader_mgr.cpp
src/astra/gfx/2d/module/: painter.cpp
src/astra/util/: averagers.cpp  io.cpp  math.cpp  platform.cpp  rng.cpp  time.cpp
src/astra/util/module/: dear.cpp  timer_mgr.cpp
src/gloo/: gl.cpp  init.cpp  shader.cpp  vertex_array.cpp  wrap.cpp
src/sdl3_raii/: event_pump.cpp  gl_attr.cpp  gl_context_flags.cpp  init.cpp  window.cpp
